# ImmortalsDBG

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
CMake/: FindBgfx.cmake  FindBx.cmake  FindSDL2.cmake  Helpers.cmake
Source/: RobotData.h  imgui_impl.cpp  imgui_impl.h  main.cpp
Source/drawing/: Ball.h  Drawable.h  Field.h  FieldRenderer.cpp  FieldRenderer.h  FieldRendererBall.cpp  FieldRendererField.cpp  FieldRendererRobot.cpp  IDrawable.h  Robot.h  colors.h  field.h  robot.h  util.h  vectors.h
Source/utility/: colors.h  scaled_imdrawlist.cpp  scaled_imdrawlist.h  vector_helper.cpp  vector_helper.h
Source/utility/network/: netraw.cpp  robocup_ssl_client.cpp  robocup_ssl_client.h
_source/: pch.h
_source/drawing/: FieldRenderer.cpp  FieldRendererBall.cpp  FieldRendererField.cpp  IPlacable.h
_source/utility/network/: robocup_ssl_client.h  udp_client.cpp
source/: main.cpp  pch.h
source/drawing/: FieldRendererRobot.cpp
source/utility/: scaled_imdrawlist.h  vector_helper.cpp
source/utility/network/: robocup_ssl_client.cpp  udp_client.cpp  udp_client.h
